[workspace.package]
version = "0.7.5"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
members = ["crates/evm", "crates/revm", "crates/chainspec", "crates/primitives"]

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
morph-chainspec = { path = "crates/chainspec", default-features = false }
morph-evm = { path = "crates/evm", default-features = false }
morph-revm = { path = "crates/revm", default-features = false }
morph-primitives = { path = "crates/primitives", default-features = false, features = [
  "serde",
  "reth",
] }

reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3" }

reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "64909d3", features = [
  "std",
  "optional-checks",
] }
revm = { version = "33.1.0", features = ["optional_fee_charge"] }

alloy = { version = "1.1.3", default-features = false }
alloy-consensus = { version = "1.1.3", default-features = false }
alloy-contract = { version = "1.1.3", default-features = false }
alloy-eips = { version = "1.1.3", default-features = false }
alloy-evm = "0.25.2"
alloy-genesis = "1.1.3"
alloy-hardforks = "0.4.5"
alloy-network = { version = "1.1.3", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-provider = { version = "1.1.3", default-features = false }
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.1.3"
alloy-rpc-types-eth = { version = "1.1.3" }
alloy-serde = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = "1.1.3"
alloy-sol-types = "1.4.1"
alloy-transport = "1.1.3"

commonware-broadcast = "0.0.63"
commonware-codec = "0.0.63"
commonware-consensus = "0.0.63"
commonware-cryptography = "0.0.63"
commonware-macros = "0.0.63"
commonware-p2p = "0.0.63"
commonware-runtime = "0.0.63"
commonware-storage = "0.0.63"
commonware-utils = "0.0.63"

arbitrary = { version = "1.3", features = ["derive"] }
async-lock = "3.4.1"
async-trait = "0.1"
auto_impl = "1"
axum = "0.8.4"
base64 = "0.22"
blake3 = "1.8"
bytes = "1.8"
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
eyre = "0.6.12"
futures = "0.3.31"
governor = "0.10.2"
indexmap = "2.11.0"
indicatif = "0.18"
itertools = "0.14.0"
jiff = { version = "0.2.15", default-features = false }
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
metrics = "0.24.0"
p256 = "0.13"
parking_lot = "0.12.4"
prometheus-client = "0.24.0"
proptest = "1.7"
proptest-arbitrary-interop = "0.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10"
tempfile = "3.20.0"
test-fuzz = "7"
thiserror = "2.0.14"
# TODO: restrict this to only the required features
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
criterion = "0.7.0"
test-case = "3"
secp256k1 = "0.30.0"
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
