[package]
name = "morph-engine-api"
description = "Morph L2 Engine API implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# morph
morph-chainspec.workspace = true
morph-payload-types = { workspace = true, features = ["serde"] }
morph-primitives.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
async-trait.workspace = true
auto_impl.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-genesis.workspace = true
serde_json.workspace = true

[features]
default = []
