[package]
name = "morph-evm"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
morph-chainspec.workspace = true
morph-primitives.workspace = true
morph-revm.workspace = true

reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
thiserror.workspace = true

[dev-dependencies]
revm.workspace = true
serde_json.workspace = true
alloy-genesis.workspace = true

[features]
default = []
reth-codec = ["morph-primitives/reth-codec"]
rpc = ["dep:reth-rpc-eth-api", "morph-revm/rpc"]
engine = []
