[package]
name = "morph-evm"
description = "Morph EVM implementation"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
morph-chainspec.workspace = true
morph-primitives = { workspace = true, features = ["serde-bincode-compat"] }
morph-revm.workspace = true
morph-payload-types.workspace = true

reth-chainspec.workspace = true
reth-evm.workspace = true
reth-ethereum-primitives = { workspace = true, features = ["serde", "serde-bincode-compat"] }
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
thiserror.workspace = true
revm.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
alloy-genesis.workspace = true

[features]
default = []
serde-bincode-compat = [
    "morph-primitives/serde-bincode-compat",
]
rpc = ["dep:reth-rpc-eth-api", "morph-revm/rpc"]
