[package]
name = "morph-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Morph crates
morph-chainspec.workspace = true

# Reth RPC
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true

# Async
async-trait.workspace = true

# JSON-RPC
jsonrpsee.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

[features]
default = []
