[package]
name = "morph-primitives"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-db-api = { workspace = true, optional = true }
reth-ethereum-primitives = { workspace = true, optional = true }
reth-primitives-traits.workspace = true
reth-codecs = { workspace = true, optional = true }
reth-zstd-compressors = { workspace = true, optional = true }

# Alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-serde = { workspace = true, optional = true }

# Utils
bytes.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
modular-bitfield = { version = "0.11.2", optional = true }


[dev-dependencies]

[features]
default = ["serde", "reth-codec"]
serde = [
    "dep:serde",
    "dep:alloy-serde",
    "alloy-primitives/serde",
    "alloy-eips/serde",
    "alloy-consensus/serde",
]
reth = [
	"dep:reth-ethereum-primitives",
]
reth-codec = [
	"reth",
	"serde",
	"dep:reth-codecs",
	"dep:reth-db-api",
	"dep:modular-bitfield",
	"dep:reth-zstd-compressors",
	"reth-ethereum-primitives/reth-codec",
	"reth-codecs/alloy",
	"reth-primitives-traits/reth-codec",
]
