[package]
name = "morph-primitives"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-primitives-traits.workspace = true
reth-codecs = { workspace = true, optional = true }
reth-db-api = { workspace = true, optional = true }
reth-zstd-compressors = { workspace = true, optional = true }
reth-ethereum-primitives = { workspace = true, optional = true }

# Alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# Codec
bytes = { workspace = true, optional = true }
modular-bitfield = { version = "0.11.2", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
alloy-serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "dep:alloy-serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "reth-primitives-traits/serde",
    "reth-ethereum-primitives?/serde",
]

serde-bincode-compat = [
    "serde",
    "alloy-consensus/serde-bincode-compat",
    "alloy-eips/serde-bincode-compat",
    "reth-primitives-traits/serde-bincode-compat",
    "dep:reth-ethereum-primitives",
    "reth-ethereum-primitives/serde",
    "reth-ethereum-primitives/serde-bincode-compat",
]
reth-codec = [
    "serde",
    "dep:reth-codecs",
    "dep:reth-db-api",
    "dep:modular-bitfield",
    "dep:reth-zstd-compressors",
    "dep:reth-ethereum-primitives",
    "reth-ethereum-primitives/reth-codec",
    "reth-codecs/alloy",
	"dep:bytes",
    "reth-primitives-traits/reth-codec",
]
