[package]
name = "morph-payload-builder"
description = "Morph payload builder"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Dependencies will be added when implementing the builder

[dev-dependencies]

[features]
default = []

