[package]
name = "morph-payload-builder"
description = "Morph payload builder"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Morph
morph-chainspec.workspace = true
morph-evm = { workspace = true, features = ["serde-bincode-compat"] }
morph-payload-types = { workspace = true, features = ["serde"] }
morph-primitives = { workspace = true, features = ["serde-bincode-compat", "reth-codec"] }

# Reth
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# Revm
revm.workspace = true

# Utils
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]

[features]
default = []
