[package]
name = "morph-payload-types"
description = "Morph payload types for Engine API"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Morph
morph-primitives = { workspace = true, features = ["serde-bincode-compat"] }

# Reth
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
alloy-serde.workspace = true

# Utils
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
